Project Techbranch {
  database_type: 'PostgreSQL'
  Note: '''
    # Techbranch Database
  '''
}

Table articles {
  id bigserial [pk]
  title varchar [not null]
  url text [not null]
  image text
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table users {
  id bigserial [pk]
  username varchar [not null]
  email varchar [not null, unique]
  password varchar
  google_id varchar
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table bookmarks {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]
  article_id bigint [not null, ref: > articles.id]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table comments {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]
  article_id bigint [not null, ref: > articles.id]
  content varchar [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}
